# learning-monorepo

./: .gitignore  CLAUDE.md  README.md  mise.toml
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/app/: main.py
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/app/api/: dependencies.py  routes.py
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/app/core/: config.py  container.py
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/app/infra/llm/: openrouter_client.py
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/app/prompts/: builder.py  system.py
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/app/prompts/templates/: intent_analysis.j2  response_generation.j2
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/app/schemas/: intent.py
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/app/services/: commands.py  intent_service.py
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/tests/: test_classification_live.py  test_commands.py
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/web/: index.html  mise.toml  package-lock.json  package.json  vite.config.ts
courses/r-014-slurm-ai-agents/01-wrapper-llm-fastapi/web/src/: main.ts  style.css
courses/r-014-slurm-ai-agents/02-sdk-incident-agent/: .env.example  .gitignore  README.md  pyproject.toml
courses/r-014-slurm-ai-agents/02-sdk-incident-agent/incident_agent/: agent.py  tools.py
courses/r-014-slurm-ai-agents/02-sdk-incident-agent/k8s/: kustomization.yaml
courses/r-014-slurm-ai-agents/02-sdk-incident-agent/k8s/rbac/: clusterrole.yaml  clusterrolebinding.yaml  kustomization.yaml  namespace.yaml  serviceaccount.yaml
courses/r-014-slurm-ai-agents/02-sdk-incident-agent/litellm/: config.yaml  run.sh
(+4 files in other folders)
