[project]
name = "intent-llm-wrapper"
version = "0.1.0"
description = "Learning LLM wrapper with intent classification (R-014, module 01)."
requires-python = ">=3.12"
# Dependencies are layered in step by step.
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.6",
    "openai>=2.44.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["live: hits the real LLM (set RUN_LIVE=1; spends OpenRouter credits)"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.8.0",
]
